2010-12-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-persistency-file-name): Use
	`locate-user-emacs-file' if fboundp.

2010-12-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-action-password, tramp-process-actions): Revert
	patch from 2010-12-08.  Use `save-restriction'.

2010-12-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-temp-buffer-file-name): Make it permanent-local.
	(tramp-handle-insert-file-contents): Do not set permanent-local
	property.
	(tramp-action-password): Delete region, do not narrow.
	(tramp-process-actions): Do not widen.

	* tramp-sh.el (tramp-handle-start-file-process): Protect
	buffer-modified value.  (Bug#7557)

2010-12-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-methods): Add "ksu".
	(tramp-default-user-alist): Add "ksu".  Use `regexp-opt' for
	method list.

2010-12-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-debug-message): Extend function exclude list.

	* tramp-sh.el (tramp-methods): Add recursive options to "pscp" and
	"psftp".  Exchange "%k" marker with options.
	(tramp-do-copy-or-rename-file, tramp-sh-handle-file-local-copy):
	Compute size of link target.
	(tramp-do-copy-or-rename-file-out-of-band). Move setting of
	`tramp-current-*' up due to gateway methods.  Optimze computing of
	copy arguments.  Use `tramp-get-connection-name' and
	`tramp-get-connection-buffer'.  Improve debug messages.

2010-11-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method-alist)
	(tramp-default-user-alist, tramp-default-proxies-alist): Adapt
	custom options type.  (Bug#7445)
	(tramp-local-host-regexp): Add "localhost6".
	(tramp-file-name-port): Check also for `tramp-default-port'.
	(tramp-get-connection-name): New defun.
	(tramp-get-connection-process): Use it.
	(tramp-drop-volume-letter): Fix doc string.

	* tramp-cmds.el: Remove solved todo item.

	* tramp-efs.el:
	* tramp-ftp.el:
	* tramp-gvfs.el:
	* tramp-gw.el: