@@ -386,13 +386,13 @@ detected as prompt when being sent on echoing hosts, therefore.")
 (add-to-list 'tramp-default-user-alist
 	     `(,(concat "\\`" (regexp-opt '("su" "sudo" "ksu")) "\\'")
 	       nil "root"))
+;; Do not add "ssh" based methods, otherwise ~/.ssh/config would be ignored.
 (add-to-list 'tramp-default-user-alist
 	     `(,(concat
 		 "\\`"
 		 (regexp-opt
-		  '("rcp" "remcp" "scp" "scp1" "scp2" "scpc" "scpx" "sftp"
-		    "rsync" "rsyncc" "rsh" "remsh" "ssh" "ssh1" "ssh2" "sshx"
-		    "telnet" "krlogin" "plink" "plink1" "pscp" "psftp" "fcp"))
+		  '("rcp" "remcp" "rsh" "telnet" "krlogin"
+		    "plink" "plink1" "pscp" "psftp" "fcp"))
 		 "\\'")
 	       nil ,(user-login-name)))
 
